--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Cache-Control" content="max-age=7200" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="keyword" content="魅蓝，抽奖，QQ空间，黄钻手机节，算法">
-  <meta name="description" content="魅蓝公开抽奖算法">
+  <meta name="description" content="领取QQ空间黄钻">
   <meta name="bigertech" content="bigertech@foxmail.com">
 
   <link rel="shortcut icon" href="assets/images/favicon.ico">
@@ -36,7 +36,7 @@
     <div class="container">
       <div id="title">
         <p class="title">领取QQ空间黄钻</p>
-        <p class="title2">快来领取属于你的黄钻</p>
+        <p class="title2" style="font-size: 19px">（仅针对参与QQ空间黄钻手机节活动且通过京东渠道下单的用户）</p>
       </div>
 
       <form role="form" class="form">
@@ -60,6 +60,7 @@
         <div class="modal-success-main">
           <span class="text-succeed good">恭喜您，您的QQ号已经登记成功</span>
           <span class="text-succeed text-succeed2">稍后会有工作人员给您发放QQ黄钻特权</span>
+          <span id="remainMessage" class="text-succeed text-succeed3" style="font-size: 19px"></span>
           <span class="text-atten attention">添加微信号：bigertech，发奖第一时间告诉你</span>
           <span class="text-atten-sm">添加微信号：bigertech，发奖第一时间告诉你</span>
         </div>
