--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width height=device-height, initial-scale=1.0 user-scalable=no">
   <meta http-equiv="Cache-Control" content="max-age=7200" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="keyword" content="魅蓝，抽奖，QQ空间，黄钻手机节，算法">
+  <meta name="keyword" content="魅蓝，抽奖，QQ空间，黄钻手机节">
   <meta name="description" content="领取QQ空间黄钻">
   <meta name="bigertech" content="bigertech@foxmail.com">
 
